--- a/src/features/dashboard/components/CriticalFactorCard/CriticalFactorCard.module.css
+++ b/src/features/dashboard/components/CriticalFactorCard/CriticalFactorCard.module.css
@@ -33,7 +33,7 @@
 .headerInfo {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: start;
 }
 
 .factorName {
@@ -42,7 +42,6 @@
   font-weight: var(--font-weight-bold);
   color: var(--color-text-light);
   letter-spacing: var(--letter-spacing-tight);
-  text-align: center;
   line-height: var(--line-height-tight);
   display: flex;
   align-items: center;
@@ -59,7 +58,6 @@
 .description {
   font-size: var(--font-size-md);
   line-height: var(--line-height-normal);
-  text-align: center;
   color: var(--color-text-light);
   margin: 0;
   font-weight: var(--font-weight-regular);
@@ -68,7 +66,6 @@
 .noSuggestions {
   font-size: var(--font-size-sm);
   color: var(--color-text-muted);
-  text-align: center;
   margin: 0;
   font-weight: var(--font-weight-medium);
 }
